--- a/about.html
+++ b/about.html
@@ -34,15 +34,22 @@
 	<div class="container">	
 		<section>
           <div class="row ContentSection">
-              <div class="col-sm-6 text-center m-auto ">
-                <h1>Heading</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when ...</p>
+              <div class="col-sm-6 m-auto text-center ">
+                <h1 class="mb-3">Hello,</h1>
+                <p >I am Shraddha Rajkuwar, a UI/UX designer and developer </p>
+                   <p> I am graduated from <span class="text-primary">Amravati University</span> with a degree in bachelor of engineeing in information technology</p>
+                    I believe in design thinking and I love to create meaningful user expriences.
+                </p>
+               <div class="text-center">
+                  <p> <a href="#MySkills" class="mr-3 text-primary text-decoration-none">My skills</a>and <a href="#Services" class="mr-3 text-primary text-decoration-none ml-3">Sevices</a></p>
+               
+               </div>
               </div>
           </div>
         </section>
-        <section class="MySkills ContentSection container">
+        <section class="MySkills  container" id="MySkills">
             <div>
-                <h3 class="text-primary my-3">My Skills</h3>
+                <h3 class="text-primary mb-3 text-center">My skills</h3>
                 <div class="skill-bars row">
                     <div class="bar col-sm-4">
                         <div class="info">
@@ -119,9 +126,9 @@
                 </div>
             </div>
         </section>
-        <section class="Services ContentSection container">
+        <section class="Services mt-3 container ContentSection" id="Services">
             <div>
-                <h3 class="text-primary mb-3">Services</h3>
+                <h3 class="text-primary mb-4 text-center">Services</h3>
 
                 <div class="row">
                     <div class="col-sm-4">
@@ -131,7 +138,7 @@
                                
                                 <div class="card-body">
                                     <h5 class="card-title">Wireframing</h5>
-                                    <p class="card-text text-center">Build mobile first solutions for ios, Android taking your idea to polished product.</p>
+                                    <p class="card-text text-center">Creating prototype and wireframes to bring ideas into product</p>
                                 </div>
                             </div>
                         </div>
@@ -153,8 +160,8 @@
                             <div class="card-body">
                                 <img class="card-img-top" src="./img/web-development.svg" height="100px" width="100px" />
                                 <div class="card-body">
-                                    <h5 class="card-title">Web App Design</h5>
-                                    <p class="card-text text-center">Specialise in Graphic design Whether you need to create a new website or updat.</p>
+                                    <h5 class="card-title">Web App development</h5>
+                                    <p class="card-text text-center">Design, build & maintain web apps to help community.</p>
                                 </div>
                             </div>
                         </div>
@@ -167,6 +174,11 @@
 	
 
 </div><!-- container //  -->
+<footer class="border-top text-center ">
+	<h4 class="font-weight-bold">Let's connect</h4>
+	<a class="text-primary text-decoration-none" href="mailto:rajkuwarshraddha03@gmail.com" target="_blank">rajkuwarshraddha03@gmail.com</a>
+	<br><a class="social-media-link" href="https://www.linkedin.com/in/shraddharajkuwar/" target="_blank"><i class="fab fa-linkedin"></i></a>
+</footer>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" ></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
