--- a/exprience.html
+++ b/exprience.html
@@ -35,57 +35,55 @@
 		<section>
           <div class="row ContentSection">
               <div class="col-sm-6 text-center m-auto ">
-                <h1>Heading</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when ...</p>
+                <h1>Exprience</h1>
+                <p>Since 2017 I am working and growing</p>
+                <p> I am having total <span class="text-primary">3+ years</span> of industry exprience and <span class="text-primary">2 years</span> of exprience in web design and development.
               </div>
           </div>
         </section>
         <section class="MyExprience mt-3">
-            <div>
-                <h3 class="text-primary my-3">My Exprience</h3>
-                <div class="timeline">
-                    <div class="timeline-row">
-                        <div class="timeline-time">April 2020 To Till Date</div>
-                        <div class="timeline-dot fb-bg"></div>
-                        <div class="timeline-content">                              
-                            <h4>UI UX Designer and Developer</h4>
-                            <p class="mb-2">Blue-Bricks Pty Ltd, Pune</p> 
-                            <ul class="ml-0 pl-3">              
-                                <li class="body-text">Created responsive websites for company's various products using wordpress</li>
-                                <li class="body-text"> Wireframing for mobile applications</li>
-                                <li class="body-text"> Worked on admin and user dashboard for Ekyc</li>
-                                <li class="body-text"> Created LMS dasboard for teacher and student</li>
-                                <li class="body-text"> Admin dashboard for 2FA system</li>
-                                <li class="body-text"> Web app for kid learning platform</li>
-                                <li class="body-text"> Created user dashboard for single sign on applications</li>
-                              </ul>
-                            
-                        </div>
+            <div class="timeline">
+                <div class="timeline-row">
+                    <div class="timeline-time">April 2020 To Till Date</div>
+                    <div class="timeline-dot fb-bg"></div>
+                    <div class="timeline-content">                              
+                        <h4>UI UX Designer and Developer</h4>
+                        <p class="mb-2">Blue-Bricks Pty Ltd, Pune</p> 
+                        <ul class="ml-0 pl-3">              
+                            <li class="body-text">Created responsive websites for company's various products using wordpress</li>
+                            <li class="body-text"> Wireframing for mobile applications</li>
+                            <li class="body-text"> Worked on admin and user dashboard for Ekyc</li>
+                            <li class="body-text"> Created LMS dasboard for teacher and student</li>
+                            <li class="body-text"> Admin dashboard for 2FA system</li>
+                            <li class="body-text"> Web app for kid learning platform</li>
+                            <li class="body-text"> Created user dashboard for single sign on applications</li>
+                          </ul>
+                        
                     </div>
-                    <div class="timeline-row">
-                        <div class="timeline-time">Sep 2019 To April 2020</div>
-                        <div class="timeline-dot green-one-bg"></div>
-                        <div class="timeline-content green-one">                                
-                            <h4>Assistance Front-End Designer</h4>
-                            <p class="mb-2">The Other Fruit, Pune</p>                                
-                            <ul class="ml-0 pl-3">                                    
-                                <li class="body-text">To create mobile responsive web design</li>
-                                <li class="body-text">To convert PSD to HTML file</li>
-                                <li class="body-text">To create website using wordpress</li>
-                                <li class="body-text"> To  develop standard code with version control git</li>
-                              </ul>                             
-                        </div>
+                </div>
+                <div class="timeline-row">
+                    <div class="timeline-time">Sep 2019 To April 2020</div>
+                    <div class="timeline-dot green-one-bg"></div>
+                    <div class="timeline-content green-one">                                
+                        <h4>Assistance Front-End Designer</h4>
+                        <p class="mb-2">The Other Fruit, Pune</p>                                
+                        <ul class="ml-0 pl-3">                                    
+                            <li class="body-text">To create mobile responsive web design</li>
+                            <li class="body-text">To convert PSD to HTML file</li>
+                            <li class="body-text">To create website using wordpress</li>
+                            <li class="body-text"> To  develop standard code with version control git</li>
+                          </ul>                             
                     </div>
-                    <div class="timeline-row">
-                        <div class="timeline-time">July 2017 To March 2019</div>
-                        <div class="timeline-dot green-two-bg"></div>
-                        <div class="timeline-content green-two">                               
-                            <h4>Associate</h4>
-                            <p class="mb-2">Concentrix India Pvt Ltd, Pune</p>  
-                            <ul class="ml-0 pl-3">                                    
-                                <li class="body-text">Ticket generation and verification of issue raised from user side</li>                                  
-                            </ul> 
-                        </div>
+                </div>
+                <div class="timeline-row">
+                    <div class="timeline-time">July 2017 To March 2019</div>
+                    <div class="timeline-dot green-two-bg"></div>
+                    <div class="timeline-content green-two">                               
+                        <h4>Associate</h4>
+                        <p class="mb-2">Concentrix India Pvt Ltd, Pune</p>  
+                        <ul class="ml-0 pl-3">                                    
+                            <li class="body-text">Ticket generation and verification of issue raised from user side</li>                                  
+                        </ul> 
                     </div>
                 </div>
             </div>
@@ -93,8 +91,13 @@
 		
 	</div>
 	
-
+   
 </div><!-- container //  -->
+<footer class="border-top text-center ">
+    <h4 class="font-weight-bold">Let's connect</h4>
+    <a class="text-primary text-decoration-none" href="mailto:rajkuwarshraddha03@gmail.com" target="_blank">rajkuwarshraddha03@gmail.com</a>
+    <br><a class="social-media-link" href="https://www.linkedin.com/in/shraddharajkuwar/" target="_blank"><i class="fab fa-linkedin"></i></a>
+</footer>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" ></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
