--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <body>
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light" id="navbar_top">
-			<a class="navbar-brand" href="#">Navbar</a>
+			<a class="navbar-brand" href="#">
+				<img src="./img/logo.png" height="60px" width="60px" class="img-fluid">
+			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -35,17 +37,13 @@
 			<section id="home">			
 				<div class="row">
 					<div class="col-sm-6 d-flex align-items-center justify-content-center">
-						<div>
+						<div class="hero-content">
 							<h1 class="mb-4 hero-head">I'm <span class="text-primary hero-head">Shraddha Rajkuwar</span></h1>
-							<h1>I enjoy creating user-centric, delightful, and human experiences. </h1>
-							<!-- <h1 class="mb-4 hero-head">
-								<a href="" class="typewrite text-dark" data-period="2000" data-type='[ "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
-									<span class="wrap"></span>
-								</a>
-							</h1> -->
+							<h1 class="hero-sub-text">I enjoy creating user-centric, delightful, and human experiences. </h1>
+						
 							<h3 class="mb-4 hero-fancy-text hero-head"></h3>
 							<a href="Resume Shraddha Rajkuwar.pdf" class="btn btn-primary my-3" download>Download CV</a>
-							<a href="#mywork" class="btn btn-secondary my-3 ml-3">My Work</a>
+							<a href="#mywork" class="btn btn-secondary">My Work</a>
 							
 						</div>
 					</div>
@@ -54,7 +52,7 @@
 							<img src="./img/dotted.png" height="200px" width="200px" />
 						</div>  -->
 						<div class="text-center " >
-							<img src="./img/hero-img.png" class="object-fit-cover intro-img object-fit-position" height="500px" width="100%" />
+							<img src="./img/hero-img.png" class="intro-img " height="500px" width="100%" />
 						</div>
 					</div>
 				</div>			
@@ -63,12 +61,12 @@
 			<div>
 				<h3 class="text-primary mb-3">My Work</h3>
 				<div>
-					<ul class="nav nav-tabs nav-pills with-arrow flex-column flex-sm-row text-center" id="myTab" role="tablist">
+					<ul class="nav nav-tabs nav-pills with-arrow text-center" id="myTab" role="tablist">
 						<li class="nav-item flex-sm-fill">
 							<a class="nav-link mr-sm-3 rounded-0 border active" id="Website-Design-tab" data-toggle="tab" href="#Website-Design" role="tab" aria-controls="home" aria-selected="true">Websites</a>
 						</li>
 						<li class="nav-item flex-sm-fill">
-							<a class="nav-link mr-sm-3 rounded-0 border" id="Web-application-tab" data-toggle="tab" href="#Web-application" role="tab" aria-controls="profile" aria-selected="false">Web applications</a>
+							<a class="nav-link mr-sm-3 rounded-0 border" id="Web-application-tab" data-toggle="tab" href="#Web-application" role="tab" aria-controls="profile" aria-selected="false">Web app</a>
 						</li>
 						<li class="nav-item flex-sm-fill">
 							<a class="nav-link mr-sm-3 rounded-0 border" id="Wireframing-tab" data-toggle="tab" href="#Wireframing" role="tab" aria-controls="contact" aria-selected="false">Wireframing</a>
@@ -298,6 +296,11 @@
 		
 	</div>
 	
+<footer class="border-top text-center ">
+	<h4 class="font-weight-bold">Let's connect</h4>
+	<a class="text-primary text-decoration-none" href="mailto:rajkuwarshraddha03@gmail.com" target="_blank">rajkuwarshraddha03@gmail.com</a>
+	<br><a class="social-media-link" href="https://www.linkedin.com/in/shraddharajkuwar/" target="_blank"><i class="fab fa-linkedin"></i></a>
+</footer>
 
 </div><!-- container //  -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" ></script>
