--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
                 <h1 class="mb-3">Hello,</h1>
                 <p >I am Shraddha Rajkuwar, a UI/UX designer and developer </p>
                    <p> I am graduated from <span class="text-primary">Amravati University</span> with a degree in bachelor of engineeing in information technology</p>
-                    I believe in design thinking and I love to create meaningful user expriences.
-                </p>
+                  <p>  I believe in design thinking and I love to create meaningful user expriences.</p>
+                
                <div class="text-center">
                   <p> <a href="#MySkills" class="mr-3 text-primary text-decoration-none">My skills</a>and <a href="#Services" class="mr-3 text-primary text-decoration-none ml-3">Sevices</a></p>
                
