--- a/exprience.html
+++ b/exprience.html
@@ -35,7 +35,7 @@
 		<section>
           <div class="row ContentSection">
               <div class="col-sm-6 text-center m-auto ">
-                <h1>Exprience</h1>
+                <h1 class="mb-3">Exprience</h1>
                 <p>Since 2017 I am working and growing</p>
                 <p> I am having total <span class="text-primary">3+ years</span> of industry exprience and <span class="text-primary">2 years</span> of exprience in web design and development.
               </div>
