--- a/exprience.html
+++ b/exprience.html
@@ -79,7 +79,7 @@
                     <div class="timeline-time">July 2017 To March 2019</div>
                     <div class="timeline-dot green-two-bg"></div>
                     <div class="timeline-content green-two">                               
-                        <h4>Associate</h4>
+                        <h4>Sr. Representative</h4>
                         <p class="mb-2">Concentrix India Pvt Ltd, Pune</p>  
                         <ul class="ml-0 pl-3">                                    
                             <li class="body-text">Ticket generation and verification of issue raised from user side</li>                                  
