--- a/ecommerceApp.html
+++ b/ecommerceApp.html
@@ -24,8 +24,8 @@
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				<div class="navbar-nav ml-auto">
 					<a class="nav-item nav-link " href="index.html">Home </a>
-					<a class="nav-item nav-link active" href="about.html">About</a>					
-					<a class="nav-item nav-link " href="exprience.html">Exprience</a>					
+					<a class="nav-item nav-link " href="about.html">About</a>					
+					<a class="nav-item nav-link active" href="exprience.html">Exprience</a>					
 					<a class="nav-item nav-link" href="mailto:rajkuwarshraddha03@gmail.com">Contact</a>
 				</div>
 			</div>
