--- a/kids learning.html
+++ b/kids learning.html
@@ -17,15 +17,17 @@
 <body class="bg-card1">
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light" id="navbar_top">
-			<a class="navbar-brand" href="#">Navbar</a>
+			<a class="navbar-brand" href="index.html">
+				<img src="./img/logo.png" height="60px" width="60px" class="img-fluid">
+			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				<div class="navbar-nav ml-auto">
-					<a class="nav-item nav-link " href="index.html">Home </a>
+					<a class="nav-item nav-link active" href="index.html">Home </a>
 					<a class="nav-item nav-link " href="about.html">About</a>					
-					<a class="nav-item nav-link active" href="exprience.html">Exprience</a>					
+					<a class="nav-item nav-link" href="exprience.html">Exprience</a>					
 					<a class="nav-item nav-link" href="mailto:rajkuwarshraddha03@gmail.com">Contact</a>
 				</div>
 			</div>
@@ -42,40 +44,40 @@
         </section>
         <section class="Screens container">
             <div class="row">
-                <div class="col-sm-3 mb-4 mb-3">
+                <div class="col-sm-3 mb-4">
                     <img src="./img/Rif/1.1.png" width="100%" height="515px" class="img-fluid">                    
                 </div>
-                <div class="col-sm-3 mb-4 mb-3">
+                <div class="col-sm-3 mb-4">
                     <img src="./img/Rif/1.2.png" width="100%" height="515px" class="img-fluid">                    
                 </div>
-                <div class="col-sm-3 mb-4 mb-3">
+                <div class="col-sm-3 mb-4">
                     <img src="./img/Rif/1.3.png" width="100%" height="515px" class="img-fluid">                    
                 </div>
-                <div class="col-sm-3 mb-4 mb-3">
+                <div class="col-sm-3 mb-4">
                     <img src="./img/Rif/1.4.png" width="100%" height="515px" class="img-fluid">                    
                 </div>
-                <div class="col-sm-3 mb-4 mb-3">
+                <div class="col-sm-3 mb-4">
                     <img src="./img/Rif/1.6.png" width="100%" height="515px" class="img-fluid">                    
                 </div>
-                <div class="col-sm-3 mb-4 mb-3">
+                <div class="col-sm-3 mb-4">
                     <img src="./img/Rif/1.7.png" width="100%" height="515px" class="img-fluid">                    
                 </div>
-                <div class="col-sm-3 mb-4 mb-3">
+                <div class="col-sm-3 mb-4">
                     <img src="./img/Rif/1.8.png" width="100%" height="515px" class="img-fluid">                    
                 </div>
-                <div class="col-sm-3 mb-4 mb-3">
+                <div class="col-sm-3 mb-4">
                     <img src="./img/Rif/1.9.png" width="100%" height="515px" class="img-fluid">                    
                 </div>
-                <div class="col-sm-3 mb-4 mb-3">
+                <div class="col-sm-3 mb-4">
                     <img src="./img/Rif/10.png" width="100%" height="515px" class="img-fluid">                    
                 </div>
-                <div class="col-sm-3 mb-4 mb-3">
+                <div class="col-sm-3 mb-4">
                     <img src="./img/Rif/11.png" width="100%" height="515px" class="img-fluid">                    
                 </div>
-                <div class="col-sm-3 mb-4 mb-3">
+                <div class="col-sm-3 mb-4">
                     <img src="./img/Rif/12.png" width="100%" height="515px" class="img-fluid">                    
                 </div>
-                <div class="col-sm-3 mb-4 mb-3">
+                <div class="col-sm-3 mb-4">
                     <img src="./img/Rif/13.png" width="100%" height="515px" class="img-fluid">                    
                 </div>
             </div>
