--- a/about.html
+++ b/about.html
@@ -17,7 +17,9 @@
 <body>
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light" id="navbar_top">
-			<a class="navbar-brand" href="#">Navbar</a>
+			<a class="navbar-brand" href="index.html">
+				<img src="./img/logo.png" height="60px" width="60px" class="img-fluid">
+			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
