--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 									<div class="card mb-3 work-card border-0">
 										<div class="card-header border-0 text-left bg-none pt-4">
 											<h5 class="card-title text-left">Comapny Website</h5>
-											<p>Website for product company</p>
+											<p>Website designed with wordpress for product base company</p>
 											<a href="https://www.blue-bricks.com/" class="stretched-link text-decoration-none text-dark" target="_blank">
-												Visit <i class="fas fa-long-arrow-alt-right ml-3"></i>
+												Visit <i class="fas fa-long-arrow-alt-right ml-2"></i>
 											</a>
 										</div>									
 										<div class="card-body d-flex flex-column-reverse pr-0   pl-5">	
@@ -90,9 +90,9 @@
 									<div class="card mb-3 work-card border-0">
 										<div class="card-header border-0 text-left bg-none pt-4">
 											<h5 class="card-title text-left">Product Website</h5>
-											<p>Single page website for complete product description and features</p>
+											<p>A Single page website designed with wordpress for complete product description and features</p>
 											<a href="https://www.axiomprotect.com" class="stretched-link text-decoration-none text-dark" target="_blank">
-												Visit <i class="fas fa-long-arrow-alt-right ml-3"></i>
+												Visit <i class="fas fa-long-arrow-alt-right ml-2"></i>
 											</a>
 										</div>									
 										<div class="card-body d-flex flex-column-reverse pr-0   pl-5">	
@@ -104,9 +104,9 @@
 									<div class="card mb-3 work-card border-0">
 										<div class="card-header border-0 text-left bg-none pt-4">
 											<h5 class="card-title text-left">Product website</h5>
-											<p>Single page website for complete product description and features</p>
+											<p>A Single page website designed with wordpress for complete product description and features</p>
 											<a href="https://www.valydate4u.com" class="stretched-link text-decoration-none text-dark" target="_blank">
-												Visit <i class="fas fa-long-arrow-alt-right ml-3"></i>
+												Visit <i class="fas fa-long-arrow-alt-right ml-2"></i>
 											</a>
 										</div>									
 										<div class="card-body d-flex flex-column-reverse pr-0   pl-5">	
@@ -119,9 +119,9 @@
 								<div class="card mb-3 work-card border-0">
 									<div class="card-header border-0 text-left bg-none pt-4">
 										<h5 class="card-title text-left">Demo website</h5>
-										<p>A horizonatl demo website</p>
+										<p>A horizontal demo website created using CSS framework bootstrap4</p>
 										<a href="https://shraddharajkuwar.github.io/horizontal-website/" class="stretched-link text-decoration-none text-dark" target="_blank">
-											Visit <i class="fas fa-long-arrow-alt-right ml-3"></i>
+											Visit <i class="fas fa-long-arrow-alt-right ml-2"></i>
 										</a>
 									</div>									
 									<div class="card-body d-flex flex-column-reverse pr-0   pl-5">	
@@ -140,7 +140,7 @@
 											<h5 class="card-title text-left">Mobile app - Kid's learning </h5>
 											<p>Mobile application to help kids to check their pronounce accuracy, reading speed, fluency</p>
 											<a href="kids learning.html" class="stretched-link text-decoration-none text-dark" class="stretched-link text-decoration-none text-dark" target="_blank">
-												View Prototype <i class="fas fa-long-arrow-alt-right ml-3"></i>
+												View Prototype <i class="fas fa-long-arrow-alt-right ml-2"></i>
 											</a>
 										</div>									
 										<div class="card-body d-flex flex-column-reverse pr-0  pl-5">	
@@ -154,7 +154,7 @@
 											<h5 class="card-title text-left">Mobile app - Gaming product e-commerce demo app </h5>
 											<p>Demo screens for e-commerce gaming product app</p>
 											<a href="ecommerceApp.html"  class="stretched-link text-decoration-none text-dark" target="_blank">
-												View prototype <i class="fas fa-long-arrow-alt-right ml-3"></i>
+												View prototype <i class="fas fa-long-arrow-alt-right ml-2"></i>
 											</a>
 										</div>									
 										<div class="card-body d-flex flex-column-reverse pr-0  pl-5">	
@@ -168,7 +168,7 @@
 											<h5 class="card-title text-left">Online platform for realtors</h5>
 											<p>Web app to help realtors to post property, search new realtors, matching leads</p>
 											<a href="realtors.html" target="_blank" class="stretched-link text-decoration-none text-dark">
-												View prototype <i class="fas fa-long-arrow-alt-right ml-3"></i>
+												View prototype <i class="fas fa-long-arrow-alt-right ml-2"></i>
 											</a>
 										</div>									
 										<div class="card-body d-flex flex-column-reverse pr-0   pl-5">	
