--- a/kids learning.html
+++ b/kids learning.html
@@ -18,7 +18,7 @@
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light" id="navbar_top">
 			<a class="navbar-brand" href="index.html">
-				<img src="./img/logo.png" height="60px" width="60px" class="img-fluid">
+				<img src="./img/logo.png" height="40px" width="40px" class="img-fluid">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -38,7 +38,8 @@
           <div class="row ContentSection">
               <div class="col-sm-6 m-auto text-center ">
                 <h1 class="mb-3">Mobile app for kids learning</h1>
-                <p >Mobile application to help kids to check their pronounce accuracy, reading speed, fluency </p>  
+                <p class="mb-0">Check below wireframes for mobile application to help kids to check their pronounce accuracy, reading speed, fluency </p> 
+				<p>Tool used : <span class="ml-1 text-primary">Figma</span></p> 
               </div>
           </div>
         </section>
