--- a/realtors.html
+++ b/realtors.html
@@ -20,7 +20,7 @@
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light" id="navbar_top">
 			<a class="navbar-brand" href="index.html">
-				<img src="./img/logo.png" height="60px" width="60px" class="img-fluid">
+				<img src="./img/logo.png" height="40px" width="40px" class="img-fluid">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -40,7 +40,8 @@
           <div class="row ContentSection">
               <div class="col-sm-6 m-auto text-center ">
                 <h1 class="mb-3">Online platform for realtors</h1>
-                <p >Web app to help realtors to post property, search new realtors, matching leads </p>  
+                <p class="mb-0">Check below wireframes for web app to help realtors to post property, search new realtors, matching leads </p>  
+                <p>Tool used : <span class="ml-1 text-primary">Figma</span></p>
               </div>
           </div>
         </section>
