--- a/about.html
+++ b/about.html
@@ -163,7 +163,7 @@
                                 <img class="card-img-top" src="./img/web-development.svg" height="100px" width="100px" />
                                 <div class="card-body">
                                     <h5 class="card-title">Web App development</h5>
-                                    <p class="card-text text-center">Design, build & maintain web apps to help community.</p>
+                                    <p class="card-text text-center">Design, build & maintain web apps to solve real world problems.</p>
                                 </div>
                             </div>
                         </div>
