--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light" id="navbar_top">
-			<a class="navbar-brand" href="index.html">
+			<a class="navbar-brand p-0" href="index.html">
 				<img src="./img/logo.png" height="40px" width="40px" class="img-fluid">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
