--- a/exprience.html
+++ b/exprience.html
@@ -46,7 +46,25 @@
         <section class="MyExprience mt-3">
             <div class="timeline">
                 <div class="timeline-row">
-                    <div class="timeline-time">April 2020 To Till Date</div>
+                    <div class="timeline-time">July 26, 2021 To till date</div>
+                    <div class="timeline-dot fb-bg"></div>
+                    <div class="timeline-content">                              
+                        <h4>UI UX Designer and Developer</h4>
+                        <p class="mb-2">Stratosphere IT Services Pvt.Ltd. - Client TCS</p> 
+                        <ul class="ml-0 pl-3">              
+                            <li class="body-text">Created responsive websites for company's various products using wordpress</li>
+                            <li class="body-text"> Wireframing for mobile applications</li>
+                            <li class="body-text"> Worked on admin and user dashboard for Ekyc</li>
+                            <li class="body-text"> Created LMS dasboard for teacher and student</li>
+                            <li class="body-text"> Admin dashboard for 2FA system</li>
+                            <li class="body-text"> Web app for kid learning platform</li>
+                            <li class="body-text"> Created user dashboard for single sign on applications</li>
+                          </ul>
+                        
+                    </div>
+                </div>
+                <div class="timeline-row">
+                    <div class="timeline-time">April 21, 2020 To July 23, 2021</div>
                     <div class="timeline-dot fb-bg"></div>
                     <div class="timeline-content">                              
                         <h4>UI UX Designer and Developer</h4>
@@ -64,7 +82,7 @@
                     </div>
                 </div>
                 <div class="timeline-row">
-                    <div class="timeline-time">Sep 2019 To April 2020</div>
+                    <div class="timeline-time">Sep 23, 2019 To April 02, 2020</div>
                     <div class="timeline-dot green-one-bg"></div>
                     <div class="timeline-content green-one">                                
                         <h4>Assistance Front-End Designer</h4>
@@ -78,7 +96,7 @@
                     </div>
                 </div>
                 <div class="timeline-row">
-                    <div class="timeline-time">July 2017 To March 2019</div>
+                    <div class="timeline-time">July 20, 2017 To March 01, 2019</div>
                     <div class="timeline-dot green-two-bg"></div>
                     <div class="timeline-content green-two">                               
                         <h4>Sr. Representative</h4>
