--- a/exprience.html
+++ b/exprience.html
@@ -49,7 +49,7 @@
                     <div class="timeline-time">July 26, 2021 To till date</div>
                     <div class="timeline-dot fb-bg"></div>
                     <div class="timeline-content">                              
-                        <h4>UI UX Designer and Developer</h4>
+                        <h4>UX Designer and Developer</h4>
                         <p class="mb-2">Stratosphere IT Services Pvt.Ltd. - Client TCS</p> 
                         <ul class="ml-0 pl-3">              
                             <li class="body-text">Created responsive websites for company's various products using wordpress</li>
