--- a/exprience.html
+++ b/exprience.html
@@ -53,14 +53,12 @@
                         <p class="mb-2">Stratosphere IT Services Pvt.Ltd. - Client TCS</p> 
                         <ul class="ml-0 pl-3">              
                             <li class="body-text">Created responsive websites for company's various products using wordpress</li>
-                            <li class="body-text"> Wireframing for mobile applications</li>
-                            <li class="body-text"> Worked on admin and user dashboard for Ekyc</li>
-                            <li class="body-text"> Created LMS dasboard for teacher and student</li>
-                            <li class="body-text"> Admin dashboard for 2FA system</li>
-                            <li class="body-text"> Web app for kid learning platform</li>
-                            <li class="body-text"> Created user dashboard for single sign on applications</li>
-                          </ul>
-                        
+                            <li class="body-text"> Supporting to developer team for UI design</li>
+                            <li class="body-text"> Closely working with TCS's onshore UX team</li>
+                            <li class="body-text"> Handling UI UX queries with developer team</li>
+                            <li class="body-text"> Worked for web accessibility guidelines to ensure application accessibility compliance - Received appreciation note from onshore team for the good work</li> 
+                            <li class="body-text"> Handling scrum calls</li>                           
+                          </ul>                        
                     </div>
                 </div>
                 <div class="timeline-row">
